# gameboy-emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
saves/: linksawakening.battery
source/: bus.cpp  bus.hpp  cart.cpp  cart.hpp  common.hpp  cpu.cpp  cpu.hpp  dma.cpp  dma.hpp  emulator.cpp  emulator.hpp  gamepad.cpp  gamepad.hpp  instructions.cpp  instructions.hpp  io.cpp  io.hpp  lcd.cpp  lcd.hpp  lib.cpp  main.cpp  ppu.cpp  ppu.hpp  ram.cpp  ram.hpp  timer.cpp  timer.hpp  ui.cpp  ui.hpp
test/: CMakeLists.txt
test/source/: gameboy-emulator_test.cpp
